--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -26,6 +26,8 @@
     "dependencies": {
         "font-awesome": "^4.7.0",
         "jquery": "^3.7.0",
-        "update": "^0.7.4"
+        "update": "^0.7.4",
+        "vue-multiselect": "^2.1.7",
+        "vue-search-select": "^3.1.2"
     }
 }
